k8s/node-c.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-c-svc
spec:
  selector:
    app: warehouse-node-c
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warehouse-node-c
  template:
    metadata:
      labels:
        app: warehouse-node-c
    spec:
      containers:
      - name: node
        image: warehouse-node:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 50051
        args: ["-id", "node-C", "-port", "50051", "-peers", "node-a-svc:50051,node-b-svc:50051"]
